public/fonts/fonts.css
/* ... */
@font-face{font-family:"Cossette-Titre-e6d5fa";src:url("/fonts/CossetteTitre-Bold.woff2") format("woff2");font-weight:700;font-style:normal;font-display:swap;}
@font-face{font-family:"Cossette-Titre-e6d5fa__v_bf912d";src:url("/fonts/CossetteTitre-Bold.woff2") format("woff2");font-weight:700;font-style:normal;font-display:swap;}
@font-face{font-family:"Cossette-Texte-79e701";src:url("/fonts/CossetteTexte-Bold.woff2") format("woff2");font-weight:700;font-style:normal;font-display:swap;}
@font-face{font-family:"Cossette-Texte-79e701__v_7c2796";src:url("/fonts/CossetteTexte-Bold.woff2") format("woff2");font-weight:700;font-style:normal;font-display:swap;}
@font-face{font-family:"Cossette-Texte-79e701";src:url("/fonts/CossetteTexte-Regular.woff2") format("woff2");font-weight:400;font-style:normal;font-display:swap;}
@font-face{font-family:"Cossette-Texte-79e701__v_6a980a";src:url("/fonts/CossetteTexte-Regular.woff2") format("woff2");font-weight:400;font-style:normal;font-display:swap;}
@font-face{font-family:"Oi-0f3abd";src:url("/fonts/Oi-Regular.woff2") format("woff2");font-weight:400;font-style:normal;font-display:swap;}
@font-face{font-family:"Oi-0f3abd__v_6279c7";src:url("/fonts/Oi-Regular.woff2") format("woff2");font-weight:400;font-style:normal;font-display:swap;}
@font-face{font-family:"Ultra-705737";src:url("/fonts/Ultra-Regular.woff2") format("woff2");font-weight:400;font-style:normal;font-display:swap;}
@font-face{font-family:"Ultra-705737__v_597a36";src:url("/fonts/Ultra-Regular.woff2") format("woff2");font-weight:400;font-style:normal;font-display:swap;}
@font-face{font-family:"Chaumont-Script-a47a93";src:url("/fonts/ChaumontScript-Regular.woff2") format("woff2");font-weight:400;font-style:normal;font-display:swap;}
@font-face{font-family:"Chaumont-Script-a47a93__v_bac6a1";src:url("/fonts/ChaumontScript-Regular.woff2") format("woff2");font-weight:400;font-style:normal;font-display:swap;}
@font-face{font-family:"Baskervville-58e1e6";src:url("/fonts/Baskervville[wght].woff2") format("woff2");font-weight:100 900;font-style:normal;font-display:swap;}
@font-face{font-family:"Baskervville-58e1e6__v_7c9483";src:url("/fonts/Baskervville[wght].woff2") format("woff2");font-weight:100 900;font-style:normal;font-display:swap;}
@font-face{font-family:"Baskervville-58e1e6";src:url("/fonts/Baskervville-Italic[wght].woff2") format("woff2");font-weight:100 900;font-style:italic;font-display:swap;}
@font-face{font-family:"Baskervville-58e1e6__v_9b38da";src:url("/fonts/Baskervville-Italic[wght].woff2") format("woff2");font-weight:100 900;font-style:italic;font-display:swap;}
@font-face{font-family:"enjoy-please-3-599129";src:url("/fonts/enjoyplease2-Regular.woff2") format("woff2");font-weight:400;font-style:normal;font-display:swap;}
@font-face{font-family:"enjoy-please-3-599129__v_6beae1";src:url("/fonts/enjoyplease2-Regular.woff2") format("woff2");font-weight:400;font-style:normal;font-display:swap;}
@font-face{font-family:"Fat-Porn-Font-XXL-305ef0";src:url("/fonts/Fat Porn Font.woff2") format("woff2");font-weight:400;font-style:normal;font-display:swap;}
@font-face{font-family:"Fat-Porn-Font-XXL-305ef0__v_b4c142";src:url("/fonts/Fat Porn Font.woff2") format("woff2");font-weight:400;font-style:normal;font-display:swap;}
@font-face{font-family:"Format-1452-5160fe";src:url("/fonts/Format 1452 FREE.woff2") format("woff2");font-weight:500;font-style:normal;font-display:swap;}
@font-face{font-family:"Format-1452-5160fe__v_52eee4";src:url("/fonts/Format 1452 FREE.woff2") format("woff2");font-weight:500;font-style:normal;font-display:swap;}
@font-face{font-family:"Director-7c5ba8";src:url("/fonts/Director-Regular FREE.woff2") format("woff2");font-weight:400;font-style:normal;font-display:swap;}
@font-face{font-family:"Director-7c5ba8__v_ac474f";src:url("/fonts/Director-Regular FREE.woff2") format("woff2");font-weight:400;font-style:normal;font-display:swap;}
@font-face{font-family:"Director-7c5ba8";src:url("/fonts/Director-Light FREE.woff2") format("woff2");font-weight:300;font-style:normal;font-display:swap;}
@font-face{font-family:"Director-7c5ba8__v_e511ca";src:url("/fonts/Director-Light FREE.woff2") format("woff2");font-weight:300;font-style:normal;font-display:swap;}
@font-face{font-family:"Director-7c5ba8";src:url("/fonts/Director-bold FREE.woff2") format("woff2");font-weight:700;font-style:normal;font-display:swap;}
@font-face{font-family:"Director-7c5ba8__v_e02543";src:url("/fonts/Director-bold FREE.woff2") format("woff2");font-weight:700;font-style:normal;font-display:swap;}
@font-face{font-family:"Gap-Sans-76468b";src:url("/fonts/Tape stolen 2.woff2") format("woff2");font-weight:900;font-style:normal;font-display:swap;}
@font-face{font-family:"Gap-Sans-76468b__v_da5dcb";src:url("/fonts/Tape stolen 2.woff2") format("woff2");font-weight:900;font-style:normal;font-display:swap;}
@font-face{font-family:"Gap-Sans-76468b";src:url("/fonts/Tape stolen 1.woff2") format("woff2");font-weight:700;font-style:normal;font-display:swap;}
@font-face{font-family:"Gap-Sans-76468b__v_05ae74";src:url("/fonts/Tape stolen 1.woff2") format("woff2");font-weight:700;font-style:normal;font-display:swap;}
@font-face{font-family:"Handjet-e1f1d6";src:url("/fonts/Handjet[EGRD,ESHP,wght].woff2") format("woff2");font-weight:100 900;font-style:normal;font-display:swap;}
@font-face{font-family:"Handjet-e1f1d6__v_a02ee9";src:url("/fonts/Handjet[EGRD,ESHP,wght].woff2") format("woff2");font-weight:100 900;font-style:normal;font-display:swap;}
@font-face{font-family:"Bagel-Fat-One-72188b";src:url("/fonts/BagelFatOne-Regular.woff2") format("woff2");font-weight:400;font-style:normal;font-display:swap;}
@font-face{font-family:"Bagel-Fat-One-72188b__v_4a7178";src:url("/fonts/BagelFatOne-Regular.woff2") format("woff2");font-weight:400;font-style:normal;font-display:swap;}
@font-face{font-family:"Boxing-19bf99";src:url("/fonts/Boxing-Regular FREE.woff2") format("woff2");font-weight:400;font-style:normal;font-display:swap;}
/* ... */

